@@ -230,10 +230,11 @@ RQuery::$defaultFilters['device']['devicegroup']['operators']['has.vsys'] = arra
             }
             else
             {
-                if( $context->value == "vsys1")
-                    return TRUE;
-                else
-                    return FALSE;
+                return TRUE;
+                #if( $context->value == "vsys1")
+                #    return TRUE;
+                #else
+                #    return FALSE;
             }
         }
 
@@ -246,5 +247,27 @@ RQuery::$defaultFilters['device']['devicegroup']['operators']['has.vsys'] = arra
     )
 );
 
+RQuery::$defaultFilters['device']['devicegroup']['operators']['with-no-serial'] = array(
+    'Function' => function (DeviceRQueryContext $context) {
+        /** @var DeviceGroup $object */
+        $object = $context->object;
 
+        $class = get_class( $object );
+        if( $class !== "DeviceGroup" )
+            return null;
+
+        $DGdevices = $object->getDevicesInGroup();
+        if( count($DGdevices) == 0 )
+            return TRUE;
+        elseif( count($DGdevices) > 0 )
+            return False;
+
+        return null;
+    },
+    'arg' => False,
+    'ci' => array(
+        'fString' => '(%PROP% grp)',
+        'input' => 'input/panorama-8.0.xml'
+    )
+);
 // </editor-fold>
