@@ -3,6 +3,7 @@ CHANGELOG
 2.1.2
 UTIL:
 * type=rule-merger | introduce additionalmatch=logprof - to also check that only rules with same logging profile are merged
+* type=device | introduce 'filter=(devicegroup with-no-serial)'
 
 BUGFIX:
 * Dockerfiles | update
